# kengarust

./: .env.prod  .gitignore  .network_secret  Cargo.toml  Dockerfile  README.md  docker-compose.yml  rust-toolchain.toml
.github/workflows/: deploy.yml
config/: autonomous.yaml  motivation.json  network.toml
src/: .network_secret  dummy_backend.rs  main.rs  memory.rs  social_forecaster.rs
src/autonomous/: crawler.rs  learning.rs  mod.rs  self_test.rs
src/bot/: mod.rs  telegram.rs  webhook.rs  webhook_handler.rs
src/core/: hypothesis.rs  interaction.rs  motivation.rs  testing.rs
src/network/: p2p.rs  protocol.rs
src/neural/: cortex.rs  mod.rs
src/neural/memory/: episodic.rs  knowledge_graph.rs  mod.rs  semantic.rs
src/neural/processors/: hypothesis.rs  mod.rs  nlp.rs  vision.rs
src/social/: forecast.rs  mod.rs
src/utils/: crypto.rs  logging.rs
src/web/: api.rs  interface.rs  mod.rs  ws.rs
templates/: chat.html
