[package]
name = "kengarust"
version = "0.1.0"
edition = "2021"
description = "Описание вашего проекта"
license = "MIT"
repository = "https://github.com/ваш_проект/репозиторий"
homepage = "https://ваш_проект.сайт"
documentation = "https://docs.ваш_проект.сайт"
readme = "README.md"
keywords = ["example", "rust", "project"]
categories = ["category1", "category2"]
authors = ["Ваше Имя <ваш.email@пример.com>"]
serde = "1.0"

[features]
default = ["web", "telegram"]
web = []
telegram = []
autonomous = ["crawler", "self-learning"]
crawler = []
self-learning = []
unrestricted = []

[dependencies]
# Основные зависимости
async-trait = "0.1"
select = "0.5"
libp2p = "0.45"
tracing-subscriber = "0.3"
futures = "0.3"
tokio = { version = "1.0", features = ["full"] }
burn = { version = "0.10", features = ["ndarray"] }
teloxide = { version = "0.12", features = ["macros"] }
axum = { version = "0.6", features = ["ws"] }
reqwest = { version = "0.11", features = ["json"] }

# Автономные функции
[target.'cfg(feature = "autonomous")'.dependencies]
scraper = "0.13"

# Безопасность
openssl = { version = "0.10", optional = true }

[dev-dependencies]
test-case = "2.2"

