[package]
name = "kengarust"
version = "0.1.0"
edition = "2021"

description = "Rust based AI assistant with web and telegram interfaces"
repository = "https://github.com/kengarust/kengarust"
homepage = "https://kengarust.dev"
documentation = "https://docs.kengarust.dev"
authors = ["Kenga Team <team@kengarust.dev>"]


[dependencies]

async-trait = "0.1.74"
select = "0.5.0"
libp2p = "0.45.1"
tokio = { version = "1.32.0", features = ["full"] }
burn = { version = "0.10.0", features = ["ndarray"] }
teloxide = { version = "0.12.2", features = ["macros"] }
axum = { version = "0.6.20", features = ["ws"] }
reqwest = { version = "0.11.22", features = ["json"] }
serde = "1.0.188"
home = "0.5.11"  # Обновляем до последней доступной версии
scraper = { version = "0.13.0", optional = true }
openssl = { version = "0.10.57", optional = true }
dotenv = "0.15.0"
futures = "0.3.25"
tracing = "0.1.37"
log = "0.4.17"
pretty_env_logger = "0.4.0"
tracing-subscriber = "0.3.16"

# Автономные функции
[features]
default = []
autonomous = ["dep:scraper", "dep:openssl"]

[dev-dependencies]
test-case = "2.2.2"
